create less array/set instances